# Wave2WordCloud

./: .gitignore  main.py  pyproject.toml  text.py
